app/ts/components/microformats/properties.scss
@use "styles/typography";

.property {
    margin-block: var(--space-half);
    align-items: center;

    .property-name {
        @extend %caption;
        margin-right: var(--space-1x);

        &::after {
            content: ":";
        }

        &:empty {
            display: none;
        }
    }

    .property-value {
        //font-size: var(--fs-default);
    }

    .property-icon {
        margin-right: var(--space-half);
    }
}

table.properties {
    border-collapse: collapse;
    margin-bottom: var(--space-1x);

    td:empty {
        display: none;
    }
    td:not(:empty) {
        padding-right: 1ch;
    }
    td {
        padding-bottom: var(--space-half);
    }
}

